feat: add new version of Ethereum tracking logic - update Dockerfile to include tar and apk installation
